# efci

./: .gitignore  .gitmodules  README.md  effective-curry-interpreter.cabal  fourmolu.yaml  stack.yaml
app/: Main.hs
benchmarks/: Main.hs  Makefile  ReverseHO.curry  bench.csv  report.html
benchmarks/.curry/: AddNum.icurry  AddNum5.icurry  NRev.icurry  NoSharingAcrossND.icurry  PermSort.icurry  PermSortPeano.icurry  PrimesHO.icurry  Queens.icurry  ReverseHO.icurry  Run.icurry  Select.icurry  SortPrimes.icurry  TakInt.icurry  TakPeano.icurry  YesSharingAcrossND.icurry
benchmarks/result/: bench.csv
examples/: Arith.curry  Binary.curry  ND.curry  Peano.curry  PermSort.curry  Uni.curry
src/: App.hs  Debug.hs  Free.hs  Pipeline.hs  Signature.hs  Type.hs
src/Effect/FlatCurry/: Constructor.hs  Declarations.hs  Free.hs  Function.hs  IO.hs  Let.hs  Literal.hs
src/Effect/General/: Error.hs  Memoization.hs  ND.hs  Reader.hs  State.hs
src/Transformation/: FCY2AE.hs
tests/: Main.hs
