cabal-version:      2.4
name:               effective-curry-interpreter
version:            0.1.0.0

-- The license under which the package is released.
-- license:
author:             Niels Bunkenburg
maintainer:         nbu@informatik.uni-kiel.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
data-files: Prelude.curry
data-dir: data

library
    other-modules: Free
                   , Type
                   , Transformation.FCY2AE
                   , Effect.FlatCurry.Constructor
                   , Effect.FlatCurry.Function
                   , Effect.FlatCurry.Let
                   , Effect.General.ND
                   , Paths_effective_curry_interpreter
                   , Effect.General.Memoization
                   , Effect.General.State
                   , Effect.General.Reader
                   , Effect.FlatCurry.Declarations
                   , Effect.FlatCurry.IO
                   , Effect.General.Error
                   , Debug
                   , Signature
                   
    exposed-modules: App, Pipeline
    build-depends:    
      , base ^>=4.16
      , curry-frontend ^>=2.1.0
      , containers ^>=0.6.2.1
      , mtl ^>=2.2.2
      , filepath ^>=1.4.2.1
      , htrace ^>= 0.1
      , directory ^>= 1.3.6.0
      , random ^>= 1.2.0
      , newtype
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -O2 -fprof-late

executable efci
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -fprof-late
  build-depends:
      base >= 4.11
    , effective-curry-interpreter

test-suite tests
      default-language      : Haskell2010
      type                  : exitcode-stdio-1.0
      hs-source-dirs        : tests
      main-is               : Main.hs
      ghc-options           :-Wall -O2
      build-depends         : base
                            , hspec
                            , HUnit
                            , effective-curry-interpreter
                            , curry-frontend
                            , directory

benchmark benchmark-prac-haskell-bench
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        Main.hs
  ghc-options:    -O2 -fspecialise -fcross-module-specialise -flate-specialise
  build-depends:  base
                , criterion
                , effective-curry-interpreter
                , curry-frontend
                , directory